<resources>
    <string name="app_name">RecipeApp</string>
    <string name="str_checknet">No Connection</string>
    <string name="str_cbackonline">Back Online</string>
    <string name="str_exittitle">Exit</string>
    <string name="str_exit_message">Are you sure you want to Exit ?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_checkinternet">Please check your Internet</string>
    <string name="str_norecipes">Cannot Upload the Recipe</string>
    <string name="str_category">Category</string>
    <string name="str_random">Random</string>
    <string name="str_search">Search</string>
    <string name="str_ingredient">Ingredient</string>
    <string name="str_area">Area</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>